<resources>
    <string name="app_name">VideoGamesRF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NombrePokemon">Nombre del pokemon</string>
    <string name="IDPokemon">Numero de la pokedex</string>
    <string name="DescripcionPokemon">Descripcion del pokemon</string>
    <string name="TipoPokemon">Tipos del pokemon</string>
    <string name="HabilidadPokemon">Habilidad del pokemon</string>
    <string name="MovimientosPokemon">Movimientos del pokemon</string>
    <string name="HuevoPokemon">Grupo huevo que pertenece el pokemon\n</string>
    <string name="GeneracionPokemon">Generacion donde nacio el pokemon</string>
    <string name="error_network">Error de red. Por favor, verifica tu conexión a Internet.</string>
    <string name="error_server">Error del servidor. Por favor, intenta de nuevo más tarde.</string>
    <string name="error_no_data">No hay datos disponibles.</string>
    <string name="ReConexion">Reintentar.</string>
    <string name="splashpokemon">Logo inicio</string>
    <string name="NombrePokemonV">Nombre del pokemon: %1$s</string>
    <string name="IDPokemonV">Numero de la pokedex: %1$s</string>
    <string name="DescripcionPokemonV">Descripcion del pokemon: %1$s</string>
    <string name="TipoPokemonV">Tipos del pokemon: %1$s</string>
    <string name="HabilidadPokemonV">Habilidad del pokemon: %1$s</string>
    <string name="MovimientosPokemonV">Movimientos del pokemon: %1$s</string>
    <string name="HuevoPokemonV">Grupo huevo que pertenece el pokemon: %1$s</string>
    <string name="GeneracionPokemonV">Generacion donde nacio el pokemon: %1$d</string>
    <string name="logo1">i</string>
    <string name="logo2">PokeDex</string>
    <string name="subLogo">Pokedex simple</string>
    <string name="Correo">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="ResetPassword">¿Olvidó su contraseña? Restablecer aquí</string>
    <string name="incstring">© I PokeDex</string>
    <string name="auth_success">Autentificacion Exitosa</string>
    <string name="InvalidEmail">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="WrongPass">Error: La contraseña no es válida</string>
    <string name="AcountExist">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="EmailinUse">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="userExpired">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="UserNotFound">Error: No existe el usuario con la información proporcionada.</string>
    <string name="WeakPass">La contraseña debe de tener por lo menos 6 caracteres</string>
    <string name="noNet">Red no disponible o se interrumpió la conexión</string>
    <string name="errorNose">Error. No se pudo autenticar exitosamente.</string>
    <string name="msgErrornoEmail">Se requiere el correo</string>
    <string name="msgErrornoValido">El correo no tiene un formato válido</string>
    <string name="msgErrornoPass">Se requiere una contraseña</string>
    <string name="userSussccess">Usuario creado exitosamente</string>
    <string name="correoVerificacion">El correo de verificacion ha sido enviado</string>
    <string name="correoVerificacionNoEnviado">No se pudo enviar el correo de verificacion</string>
    <string name="RegionVive">Region donde vive el Pokemon</string>
    <string name="UbicacionPokemon">Area de aparicion del pokemon</string>
    <string name="PokemonAvistado">Pokemon Avistado</string>
    <string name="permiso">Permiso requerido</string>
    <string name="permisoMsg">Se necesita el permiso para poder ubicar la posición del usuario en el mapa</string>
    <string name="btnEntendido">Entendido</string>
    <string name="btnSalir">Salir</string>
    <string name="PermisoNegadoPermanente">El permiso de ubicación se ha negado permanentemente</string>
</resources>