<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141A31"
    tools:context=".ui.fragments.GameDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_bold"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        tools:text="@string/NombrePokemon" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ivImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:riv_corner_radius="10dp"
                        tools:src="@mipmap/ic_launcher" />


                        <TextView
                            android:id="@+id/tvType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:text="@string/TipoPokemon" />

                        <TextView
                            android:id="@+id/tvHabilidad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:text="@string/HabilidadPokemon" />


                        <TextView
                            android:id="@+id/tvMov"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:text="@string/MovimientosPokemon" />

                        <TextView
                            android:id="@+id/tvHuevo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:text="@string/HuevoPokemon" />

                        <TextView
                            android:id="@+id/tvGeneracion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:text="@string/GeneracionPokemon" />


                    <TextView
                        android:id="@+id/tvLongDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="@string/DescripcionPokemon" />


                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/vvVideo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="10dp"
                        />






                </LinearLayout>

            </ScrollView>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/loading_anim"
                android:indeterminateDuration="1500"
                />

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:layout_marginTop="350dp"
                android:text="@string/error_no_data"/>

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/ReConexion"
                android:layout_below="@id/tvErrorMessage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
